--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
 services:
-  # Configurator: Generates Revolt.toml into a shared volume
-  configurator:
-    image: alpine:latest
-    volumes:
-      - revolt_config:/config
+  # Revolt Mono-App: All-in-one backend and gateway
+  revolt-app:
+    build:
+      context: .
+      dockerfile: revolt-app.Dockerfile
+    restart: always
+    depends_on:
+      database:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      rabbit:
+        condition: service_healthy
+      minio:
+        condition: service_started
     environment:
-
       - RAILWAY_PUBLIC_DOMAIN=${RAILWAY_PUBLIC_DOMAIN:-localhost}
       - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
       - VAPID_PUBLIC_KEY=${VAPID_PUBLIC_KEY}
@@ -14,60 +23,10 @@ services:
       - RABBIT_PASS=${RABBIT_PASS:-rabbitpass}
       - MINIO_USER=${MINIO_USER:-minioautumn}
       - MINIO_PASS=${MINIO_PASS:-minioautumn}
-    user: root
-    entrypoint:
-      - /bin/sh
-      - -c
-      - |
-        apk add --no-progress openssl
-        CONFIG_FILE="/config/Revolt.toml"
-        if [ -f "$CONFIG_FILE" ]; then
-            echo "Configuration already exists. Skipping."
-            exit 0
-        fi
-        DOMAIN=${RAILWAY_PUBLIC_DOMAIN:-localhost}
-        PROTO="https"
-        if [ "$DOMAIN" = "localhost" ]; then PROTO="http"; fi
-        
-        if [ -z "$VAPID_PRIVATE_KEY" ] || [ -z "$VAPID_PUBLIC_KEY" ]; then
-            openssl ecparam -name prime256v1 -genkey -noout -out /tmp/priv.pem
-            VAPID_PRIVATE_KEY=$(cat /tmp/priv.pem | base64 | tr -d '\n')
-            VAPID_PUBLIC_KEY=$(openssl ec -in /tmp/priv.pem -pubout -outform DER 2>/dev/null | tail -c 65 | base64 | tr -d '\n')
-        fi
-        if [ -z "$FILES_ENCRYPTION_KEY" ]; then
-            FILES_ENCRYPTION_KEY=$(openssl rand -base64 32)
-        fi
-
-        cat <<EOF > "$CONFIG_FILE"
-        production = true
-        [database]
-        mongodb = "mongodb://database"
-        redis = "redis://redis/"
-        [hosts]
-        app = "$PROTO://$DOMAIN"
-        api = "$PROTO://$DOMAIN/api"
-        events = "ws${PROTO#http}://$DOMAIN/ws"
-        autumn = "$PROTO://$DOMAIN/autumn"
-        january = "$PROTO://$DOMAIN/january"
-        [rabbit]
-        host = "rabbit"
-        port = 5672
-        username = "${RABBIT_USER:-rabbituser}"
-        password = "${RABBIT_PASS:-rabbitpass}"
-        [pushd.vapid]
-        private_key = "$VAPID_PRIVATE_KEY"
-        public_key = "$VAPID_PUBLIC_KEY"
-        [files]
-        encryption_key = "$FILES_ENCRYPTION_KEY"
-        [files.s3]
-        endpoint = "http://minio:9000"
-        path_style_buckets = false
-        region = "minio"
-        access_key_id = "${MINIO_USER:-minioautumn}"
-        secret_access_key = "${MINIO_PASS:-minioautumn}"
-        default_bucket = "revolt-uploads"
-        EOF
-        echo "Revolt.toml generated."
+    volumes:
+      - revolt_data:/data
+    ports:
+      - "${PORT:-80}:${PORT:-80}"
 
   # MongoDB: Database
   database:
@@ -115,202 +74,11 @@ services:
       MINIO_ROOT_USER: ${MINIO_USER:-minioautumn}
       MINIO_ROOT_PASSWORD: ${MINIO_PASS:-minioautumn}
       MINIO_DOMAIN: minio
-    networks:
-      default:
-        aliases:
-          - revolt-uploads.minio
-          - attachments.minio
-          - avatars.minio
-          - backgrounds.minio
-          - icons.minio
-          - banners.minio
-          - emojis.minio
     restart: always
-
-  # Caddy: Web server
-  caddy:
-    image: docker.io/caddy
-    restart: always
-    environment:
-      PORT: ${PORT:-80}
-    entrypoint:
-      - /bin/sh
-      - -c
-      - |
-        cat <<EOF > /etc/caddy/Caddyfile
-        :{\$PORT} {
-          route /api* {
-            uri strip_prefix /api
-            reverse_proxy http://api:14702 {
-              header_down Location "^/" "/api/"
-            }
-          }
-          route /ws {
-            uri strip_prefix /ws
-            reverse_proxy http://events:14703 {
-              header_down Location "^/" "/ws/"
-            }
-          }
-          route /autumn* {
-            uri strip_prefix /autumn
-            reverse_proxy http://autumn:14704 {
-              header_down Location "^/" "/autumn/"
-            }
-          }
-          route /january* {
-            uri strip_prefix /january
-            reverse_proxy http://january:14705 {
-              header_down Location "^/" "/january/"
-            }
-          }
-          route /gifbox* {
-            uri strip_prefix /gifbox
-            reverse_proxy http://gifbox:14706 {
-              header_down Location "^/" "/gifbox/"
-            }
-          }
-          reverse_proxy http://web:5000
-        }
-        EOF
-        caddy run --config /etc/caddy/Caddyfile --adapter caddyfile
-    volumes:
-      - caddy_data:/data
-      - caddy_config:/config
-    ports:
-
-      - "${PORT:-80}:${PORT:-80}"
-
-  # API server
-  api:
-    image: ghcr.io/revoltchat/server:20250930-2
-    depends_on:
-      database:
-        condition: service_healthy
-      redis:
-        condition: service_started
-      rabbit:
-        condition: service_healthy
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Events service
-  events:
-    image: ghcr.io/revoltchat/bonfire:20250930-2
-    depends_on:
-      database:
-        condition: service_healthy
-      redis:
-        condition: service_started
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Web App
-  web:
-    image: ghcr.io/revoltchat/client:master
-    restart: always
-    environment:
-      - HOSTNAME=https://${RAILWAY_PUBLIC_DOMAIN:-localhost}
-      - REVOLT_PUBLIC_URL=https://${RAILWAY_PUBLIC_DOMAIN:-localhost}/api
-    depends_on:
-      - api
-
-  # File server
-  autumn:
-    image: ghcr.io/revoltchat/autumn:20250930-2
-    depends_on:
-      database:
-        condition: service_healthy
-      createbuckets:
-        condition: service_started
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Metadata and image proxy
-  january:
-    image: ghcr.io/revoltchat/january:20250930-2
-    depends_on:
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Tenor proxy
-  gifbox:
-    image: ghcr.io/revoltchat/gifbox:20250930-2
-    depends_on:
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Regular task daemon
-  crond:
-    image: ghcr.io/revoltchat/crond:20250930-2
-    depends_on:
-      database:
-        condition: service_healthy
-      minio:
-        condition: service_started
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Push notification daemon
-  pushd:
-    image: ghcr.io/revoltchat/pushd:20250930-2
-    depends_on:
-      database:
-        condition: service_healthy
-      redis:
-        condition: service_started
-      rabbit:
-        condition: service_healthy
-      configurator:
-        condition: service_completed_successfully
-    volumes:
-      - revolt_config:/etc/revolt
-    command: ["--config", "/etc/revolt/Revolt.toml"]
-    restart: always
-
-  # Create buckets for minio.
-  createbuckets:
-    image: docker.io/minio/mc
-    depends_on:
-      - minio
-    entrypoint: >
-      /bin/sh -c "
-      while ! /usr/bin/mc ready minio; do
-        /usr/bin/mc alias set minio http://minio:9000 ${MINIO_USER:-minioautumn} ${MINIO_PASS:-minioautumn};
-        echo 'Waiting minio...' && sleep 1;
-      done;
-      /usr/bin/mc mb minio/revolt-uploads;
-      exit 0;
-      "
 
 volumes:
-  revolt_config:
+  revolt_data:
   mongodb_data:
   redis_data:
   rabbit_data:
   minio_data:
-  caddy_data:
-  caddy_config:
