feat: use comprehensive Revolt.toml template and improve supervisor resiliency

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,6 +8,8 @@ logfile_maxbytes=0
 command=/usr/bin/revolt-delta --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -17,6 +19,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-bonfire --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -26,6 +30,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-autumn --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -35,6 +41,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-january --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -44,6 +52,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-gifbox --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -53,6 +63,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-crond --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
@@ -62,6 +74,8 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/revolt-pushd --config /data/Revolt.toml
 autostart=true
 autorestart=true
+startsecs=0
+startretries=100
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
