--- a/supervisord.conf
+++ b/supervisord.conf
@@ -81,6 +81,16 @@ stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
+[program:web]
+command=yarn start:inject
+directory=/www/client
+autostart=true
+autorestart=true
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
 [program:caddy]
 command=caddy run --config /etc/caddy/Caddyfile --adapter caddyfile
 autostart=true
