--- a/supervisord.conf
+++ b/supervisord.conf
@@ -82,7 +82,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:web]
-command=yarn start:inject
+command=/bin/sh -c "node scripts/inject.js && ./node_modules/.bin/sirv dist_injected --port 5000 --host 127.0.0.1 --cors --single"
 directory=/www/client
 autostart=true
 autorestart=true
