fix: isolate web client PORT environment variable to avoid conflict with Caddy

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -83,6 +83,7 @@ stdout_logfile_maxbytes=0
 
 [program:web]
 command=/bin/sh -c "node scripts/inject.js && ./node_modules/.bin/sirv dist_injected --port 5000 --host 127.0.0.1 --cors --single"
+environment=PORT="5000"
 directory=/www/client
 autostart=true
 autorestart=true
